--- a/Ring/Views/App.xaml
+++ b/Ring/Views/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Ring"
-             xmlns:converters="clr-namespace:Ring.Converters">
+             xmlns:converters="clr-namespace:Ring.Converters"
+             ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <!-- Converters -->
         <converters:PercentageToHeightConverter x:Key="PercentageToHeightConverter" />
