--- a/Ring/Views/MainScreen/StorageTankGroup.xaml
+++ b/Ring/Views/MainScreen/StorageTankGroup.xaml
@@ -42,13 +42,19 @@
                             CornerRadius="6"
                             Background="#F8F9FA"
                             Margin="0,0,0,12">
-                        <!-- Storage Tank Visualization Control -->
-                        <controls:TankLevelControl 
-                            FillPercentage="{Binding FillPercentage1}"
-                            Width="150"
-                            Height="250"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"/>
+                        <!-- Storage Tank Model Image -->
+                        <Image Source="{Binding StorageTankImage1}" 
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Stretch="UniformToFill"
+                               RenderOptions.BitmapScalingMode="HighQuality">
+                            <Image.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="1.3" ScaleY="1.3" />
+                                    <TranslateTransform X="-82" Y="-40" />
+                                </TransformGroup>
+                            </Image.RenderTransform>
+                        </Image>
                     </Border>
                     
                     <!-- Tank 1 Data - Consolidated -->
@@ -238,13 +244,19 @@
                             CornerRadius="6"
                             Background="#F8F9FA"
                             Margin="0,0,0,12">
-                        <!-- Storage Tank Visualization Control -->
-                        <controls:TankLevelControl 
-                            FillPercentage="{Binding FillPercentage2}"
-                            Width="150"
-                            Height="250"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"/>
+                        <!-- Storage Tank Model Image -->
+                        <Image Source="{Binding StorageTankImage2}" 
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Stretch="UniformToFill"
+                               RenderOptions.BitmapScalingMode="HighQuality">
+                            <Image.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="1.3" ScaleY="1.3" />
+                                    <TranslateTransform X="-82" Y="-40" />
+                                </TransformGroup>
+                            </Image.RenderTransform>
+                        </Image>
                     </Border>
                     
                     <!-- Tank 2 Data - Consolidated -->
